# yaaos

./: .dockerignore  .env.sample  .gitignore  .npmrc  .tool-versions  CLAUDE.md  LICENSE  README.md  fly.production.toml  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: dev-implement-phase.md  yaaos-adversary-architecture.md  yaaos-adversary-code.md  yaaos-adversary-security.md  yaaos-architecture.md  yaaos-codebase-analyzer.md  yaaos-codebase-locator.md  yaaos-codebase-pattern-finder.md  yaaos-review-architecture.md  yaaos-review-code.md  yaaos-review-security.md
.claude/skills/dev-implement/: SKILL.md
.claude/skills/dev-plan/: SKILL.md
.claude/skills/yaaos-adversarial-review/: SKILL.md
.claude/skills/yaaos-architecture-review/: SKILL.md
.claude/skills/yaaos-code-review/: SKILL.md
.claude/skills/yaaos-finding-schema/: SKILL.md  review-output.schema.json  schema.json
.claude/skills/yaaos-review/: SKILL.md
.claude/skills/yaaos-review-core/: SKILL.md
.claude/skills/yaaos-review-pr/: SKILL.md
.claude/skills/yaaos-security-review/: SKILL.md
.rwx/: push.yml
apps/agent/: .golangci.yml  Dockerfile  go.mod  go.sum
apps/agent/docs/: README.md  architecture.md  command.md  identity.md  observability.md  patterns.md  protocol.md  supervisor.md  workspace_lifecycle.md
apps/backend/: CLAUDE.md  Dockerfile  alembic.ini  conftest.py  pyproject.toml  tach.toml
apps/e2e/: package.json  playwright.config.ts
apps/fake-claude/: claude
apps/fake-github/: Dockerfile  pyproject.toml
apps/fake-github/app/: main.py  seeds.py  state.py  test_secrets.py
apps/fake-github/docs/: README.md
apps/fake-linear/: Dockerfile  pyproject.toml
apps/fake-notion/: Dockerfile  pyproject.toml
apps/fake-notion/app/: main.py  seeds.py  test_secrets.py
apps/fake-notion/docs/: README.md
apps/web/: .dependency-cruiser.cjs  biome.json  index.html  knip.json  package.json  tailwind.config.ts  vite.config.ts
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: README.md  glossary.md  setup.md  system-architecture.md  system-security.md  workspace-agent-protocol.md
docs/runbooks/: prod-deploy.md  secret-rotation.md
plan/: AUTONOMOUS_RUN.md  ROADMAP.md  VISION.md
plan/design/: M01-DELTAS.md
plan/notes/: mcp-context.md  security-posture.md
(+865 files in other folders)
