[project]
name = "yaaos"
version = "0.0.1"
description = "Self-hosted, team-scale agent orchestration service"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

[tool.uv.workspace]
members = ["apps/backend"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "PLC", # pylint conventions (PLC0415 used as escape hatch)
]
ignore = [
    "E501",  # line length — handled by formatter
    "B008",  # FastAPI uses `Query(default=...)` etc. as parameter defaults idiomatically
    "B904",  # POC: many `except → raise HTTPException` translations don't carry the cause
    "E741",  # POC: short single-letter names (e.g., `l` for lesson) used in tight comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
