[project]
name = "yaaos-fake-github"
version = "0.0.1"
description = "Test-only fake GitHub service for yaaos e2e/integration tests"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
